<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/photo_height"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/androidphoto" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_first_layout"
                android:padding="@dimen/marg_pad">

                <ImageView
                    android:id="@+id/logoImageView"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:layout_marginBottom="@dimen/marg_pad"
                    android:layout_marginEnd="@dimen/marg_pad"
                    android:layout_marginStart="@dimen/left_marg"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/technoservlogo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/short_desc"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_second_layout"
                android:padding="@dimen/marg_pad">

                <ImageView
                    android:id="@+id/uniImageView"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:layout_marginBottom="@dimen/marg_pad"
                    android:layout_marginEnd="@dimen/marg_pad"
                    android:layout_marginStart="@dimen/left_marg"
                    android:layout_marginTop="@dimen/marg_pad"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/vmk_mgu"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/uni_desc"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_third_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/marg_pad"
                    android:layout_marginStart="@dimen/left_marg"
                    android:text="@string/long_desc"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/size_forth_layout"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/messageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marg_pad"
                    android:hint="@string/hint_message"
                    android:inputType="text"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="@dimen/marg_pad"
                    android:background="@android:color/transparent"
                    android:text="@string/send_message"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_fifth_layout"
                android:layout_marginBottom="@dimen/marg_pad">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marg_pad"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/telegramImageView"
                        android:layout_width="@dimen/image_telegram_size"
                        android:layout_height="@dimen/image_telegram_size"
                        android:layout_marginBottom="@dimen/marg_pad"
                        android:layout_marginEnd="@dimen/marg_pad"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/telegram"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/vkImageView"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="@dimen/marg_pad"
                        android:layout_marginStart="@dimen/marg_pad"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/vk_com"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/instaImageView"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_marginEnd="@dimen/marg_pad"
                        android:layout_marginStart="@dimen/marg_pad"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/instagram"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>